Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

0.008     2017-07-10
    - Bump version of Alien::libuv to 0.006 to add more diagnostics
    - Add more diagnostics to the tests

0.007     2017-06-29
    - Bump the requirement of Alien::libuv to v0.004 to ensure libuv v1+

0.006     2017-06-27
    - Add Exporter to prereqs.

0.005     2017-06-27
    - Make all functions and constants exportable

0.004     2017-06-27
    - Bump requirement for Alien::libuv to 0.003, ensuring clean installs on
      more platforms
    - Add PROTOTYPES: DISABLE
    - Add XSLoader to the prereqs list

0.003     2017-06-16
    - Using DZil now
    - Make use of Alien::libuv

0.002  2017-06-10
    - Removed some stupid assumptions about compiler flags (thanks, mauke)
    - Added a version function to return the version of libUV installed

0.001  2017-06-08
    - Implemented and documented the UV::Util functions