@@ -1,0 +1,21 @@
+version: '{build}'
+shallow_clone: true
+
+environment:
+  matrix:
+    - perl_type: system
+    - perl_type: strawberry
+    - perl_type: cygwin
+
+install:
+  - 'call .appveyor.cmd perl_setup'
+  - '%perl% -V'
+  - '%cpanm% -n Alien::Base IO::Socket::SSL'
+  - '%cpanm% --installdeps -n Alien::libuv'
+  - '%cpanm% -v Alien::libuv'
+  - '%cpanm% --installdeps -n .'
+
+build: off
+
+test_script:
+  - '%cpanm% --test-only -v .'
