@@ -1,5 +1,5 @@
 # This Makefile.PL for UV-Util was generated by
-# Dist::Zilla::Plugin::MakeMaker::Awesome 0.38.
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.41.
 # Don't edit it but the dist.ini and plugins used to construct it.
 
 use strict;
@@ -49,7 +49,7 @@ my %WriteMakefileArgs = (
 %WriteMakefileArgs = (
     %WriteMakefileArgs,
     XSMULTI => 1,
-    CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}",
+    CCFLAGS => Alien::libuv->cflags . " $Config{ccflags}",
     LIBS    => [ Alien::libuv->libs ],
 );
 
