@@ -23,7 +23,7 @@ delimiter = |
 header = use Config;
 header = |use Alien::libuv ();
 WriteMakefile_arg = XSMULTI => 1
-WriteMakefile_arg = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
+WriteMakefile_arg = CCFLAGS => Alien::libuv->cflags . " $Config{ccflags}"
 WriteMakefile_arg = LIBS    => [ Alien::libuv->libs ]
 
 
