@@ -9,14 +9,10 @@ use warnings;
 use Exporter qw(import);
 require XSLoader;
 
-our @EXPORT_OK  = qw(
+our @EXPORT_OK  = (@EXPORT_OK, qw(
     cpu_info get_free_memory get_total_memory getrusage guess_handle_type
     hrtime interface_addresses loadavg resident_set_memory version
-    UV_UNKNOWN_HANDLE UV_ASYNC UV_CHECK UV_FS_EVENT UV_FS_POLL
-    UV_HANDLE UV_IDLE UV_NAMED_PIPE UV_POLL UV_PREPARE UV_PROCESS
-    UV_STREAM UV_TCP UV_TIMER UV_TTY UV_UDP UV_SIGNAL UV_FILE
-    UV_HANDLE_TYPE_MAX
-);
+));
 
 XSLoader::load('UV::Util', $XS_VERSION);
 
