@@ -1,11 +1,12 @@
-#define NEED_newCONSTSUB
-#define NEED_newRV_noinc
+#define PERL_NO_GET_CONTEXT 1
+
 #include "EXTERN.h"
 #include "perl.h"
 #include "XSUB.h"
 #include "string.h"
 #include "ppport.h"
 
+#include "p5uv_constants.h"
 #include "uv.h"
 
 #define P5LUV_DOUBLETIME(TV) ((double)(TV).tv_sec + 1e-6*(TV).tv_usec)
@@ -16,28 +17,7 @@ PROTOTYPES: DISABLE
 
 BOOT:
 {
-    HV *stash = gv_stashpvn("UV::Util", 8, TRUE);
-
-    /* expose the different handle type constants */
-    newCONSTSUB(stash, "UV_UNKNOWN_HANDLE", newSViv(UV_UNKNOWN_HANDLE));
-    newCONSTSUB(stash, "UV_ASYNC", newSViv(UV_ASYNC));
-    newCONSTSUB(stash, "UV_CHECK", newSViv(UV_CHECK));
-    newCONSTSUB(stash, "UV_FS_EVENT", newSViv(UV_FS_EVENT));
-    newCONSTSUB(stash, "UV_FS_POLL", newSViv(UV_FS_POLL));
-    newCONSTSUB(stash, "UV_HANDLE", newSViv(UV_HANDLE));
-    newCONSTSUB(stash, "UV_IDLE", newSViv(UV_IDLE));
-    newCONSTSUB(stash, "UV_NAMED_PIPE", newSViv(UV_NAMED_PIPE));
-    newCONSTSUB(stash, "UV_POLL", newSViv(UV_POLL));
-    newCONSTSUB(stash, "UV_PREPARE", newSViv(UV_PREPARE));
-    newCONSTSUB(stash, "UV_PROCESS", newSViv(UV_PROCESS));
-    newCONSTSUB(stash, "UV_STREAM", newSViv(UV_STREAM));
-    newCONSTSUB(stash, "UV_TCP", newSViv(UV_TCP));
-    newCONSTSUB(stash, "UV_TIMER", newSViv(UV_TIMER));
-    newCONSTSUB(stash, "UV_TTY", newSViv(UV_TTY));
-    newCONSTSUB(stash, "UV_UDP", newSViv(UV_UDP));
-    newCONSTSUB(stash, "UV_SIGNAL", newSViv(UV_SIGNAL));
-    newCONSTSUB(stash, "UV_FILE", newSViv(UV_FILE));
-    newCONSTSUB(stash, "UV_HANDLE_TYPE_MAX", newSViv(UV_HANDLE_TYPE_MAX));
+    constants_export_uv_util(aTHX);
 }
 
 
